Actualización del icono y nombre de la app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Mennar-reservas</string>
+    <string name="app_name">Mennar tickets/reservas</string>
 </resources>
